Archive2/f1/07daa291c52e85/output
main.cpp:6:13: error: non-constant-expression cannot be narrowed from type 'long' to 'int' in initializer list [-Wc++11-narrowing]
    int i { l };
            ^
main.cpp:6:13: note: override this message by inserting an explicit cast
    int i { l };
            ^
            static_cast<int>( )
1 error generated.
